Bug fix on overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   border: 1px solid black;
   background-color: black;
   border-radius: 15px;
+  margin-top: 200px;
 
   .display-wrapper {
     margin: auto 30px;
@@ -16,22 +17,25 @@
     display: flex;
     height: calc(100% * 0.2);
     border: 1px solid black;
-    /* overflow-x: scroll; */
+    border-radius: 10px;
 
     .display-result {
       overflow-x: scroll;
       background-color: white;
+      border: 1px solid rgb(255, 255, 255);
+      border-radius: 10px;
       border-radius: 10px;
       height: calc(100% * 0.7);
       width: 100%;
       position: relative;
-      display: flex;
       align-items: center;
-      justify-content: end;
       font-size: 50px;
       padding-right: 10px;
       font-weight: bold;
       margin: auto;
+      display: flex;
+      flex-direction: row-reverse;
+      white-space: nowrap;
     }
   }
 
